_sass/_layout.scss
@include media-query($on-mobile){
  #page{
    width: 100%;
    height: 100%;
  }

  @include nav();


}

@include media-query($on-small-device){
  @include nav();
  body{
    background-color: #d3d3d3;
  }
  #page{
    width: 100%;
    height: 100%;
    margin: 0px 0px;
    // background-color: Gray;
    .blog{
      width: 100%;
      #sectionTitle{
        color: #333;
        margin-top: 5px;
        padding-left: 8em;
        h1{
          margin: auto;
        }
      }
      .main{

        .blog-content{
          ul{
            list-style: none;
            li{
              text-decoration: none;
              width: 95%;
              margin-left: auto;
              margin-right: auto;
              background-color: white;
              padding-bottom: 1.5em;
              padding-top: 1em;
              margin-top: 1em;
              margin-bottom: 1.5em;

              box-shadow: 1px 2px 5px #888888;
              .blog-post{
                width: inherit;

                h2{
                  width: 95%;
                  margin: auto;
                  padding-bottom: 1em;
                  a{
                    text-decoration: none;
                    font-family: $blog-font-stack;
                    color: #333;

                    &:visited{
                      color: #333;
                      text-decoration: none;
                    }
                  }
                }
                p{
                  width: 90%;
                  font-size: $mobile-page-font-height;
                  margin: auto;
                  margin-bottom: .4em;
                  font-family: $blog-font-stack;
                }
                blockquote{
                  // display: block;
                  // width: 100%;
                  margin-top: 0px;
                  margin-bottom: 0px;
                  margin-right: 1em;
                  padding-top: .6em;
                  padding-bottom: .6em;
                  padding-left: .6em;
                  padding-right: .6em;
                  border-color: black;
                  border-style: groove;

                  border-left-width:  2px;
                  border-right: 0px;
                  border-top: 0px;
                  border-bottom-width:  0px;
                  float: right;
                  &.post-time{
                    display: block;
                    float: none;
                    padding-top: 0px;
                    padding-bottom: 0px;
                    margin-bottom: .3em;
                    margin-left: 1em;

                  }
                  span{
                    font-size: 90%;

                  }
                }
              }
            }
          }
          p {
            &.rss-subscribe{
              width: 90%;
              margin: auto;
              font-size: 81%;
            }
          }
        }
      }
    }
  }
}

// #page{
//   width: 90%;
//   height: 100%;
//   margin: 0px auto 36px;
// }

